; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/ui/extr_helpline.c_ui_helpline__vpush.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/ui/extr_helpline.c_ui_helpline__vpush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_helpline__vpush(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @vasprintf(i8** %5, i8* %6, i32 %7)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load i32, i32* @stderr, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @vfprintf(i32 %11, i8* %12, i32 %13)
  br label %20

15:                                               ; preds = %2
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @ui_helpline__push(i8* %16)
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @free(i8* %18)
  br label %20

20:                                               ; preds = %15, %10
  ret void
}

declare dso_local i64 @vasprintf(i8**, i8*, i32) #1

declare dso_local i32 @vfprintf(i32, i8*, i32) #1

declare dso_local i32 @ui_helpline__push(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
